--- a/pelit.html
+++ b/pelit.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Esittely</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/basiclightbox@5/dist/basicLightbox.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;800&display=swap" rel="stylesheet">
 </head>
 <body class="muut">
@@ -48,8 +49,16 @@
   Loin pelimaailmaan runsaasti puita ja muuta kasvillisuutta, mikä toi visuaalista runsautta ja luonnollisuutta. Huomasin kuitenkin, että liiallinen foliage kuormittaa grafiikkaa ja heikentää pelin suorituskykyä, joten jouduin tekemään kompromisseja optimaalisen suorituskyvyn ja visuaalisen laadun välillä. Tämä opetti minulle resurssien hallinnan merkityksen ja tasapainon löytämisen grafiikan ja toimivuuden välillä.</p>
    <br>
   <img src="img/PP2.png" alt="Pelinäkymä2">
-  <p><strong>Opettajan palaute</strong></p>
+
+  <div class="palautelaatikko">
+  <h5><strong>Opettajan palaute</strong></h5>
+  <p>(avaa kuva klikkaamalla)</p>
+
+  <a href="img/PPPalaute.png" class="lightbox-link">
   <img src="img/PPPalaute.png" alt="Palaute">
+  </a>
+  </div>
+
   </div>
   <a href="index.html" class="button3">Takaisin etusivulle</a>
 
@@ -57,6 +66,7 @@
 <p>© 2025 Juulia Vähä</p>
 </footer>
 
+<script src="https://cdn.jsdelivr.net/npm/basiclightbox@5/dist/basicLightbox.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
