--- a/shj.html
+++ b/shj.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Esittely</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/basiclightbox@5/dist/basicLightbox.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;800&display=swap" rel="stylesheet">
 </head>
 <body class="muut">
@@ -42,8 +43,15 @@ Ulkoasun pohjaksi valitsin Storefront-teeman, jota muokkasin muun muassa lisää
 Lisäsin sivustolle myös toiminnallisuuksia kuten live-chatin asiakkaiden yhteydenottoa varten ja ajastimen (Countdown Timer), jolla voidaan esitellä kampanjoita. Lomakkeet toteutin WPForms-lisäosalla.</p>
 
  <br>
-<p><strong>Opettajan palaute</strong></p>
+<div class="palautelaatikko">
+  <h5><strong>Opettajan palaute</strong></h5>
+  <p>(avaa kuva klikkaamalla)</p>
+
+<a href="img/SHJPalaute.png" class="lightbox-link">
 <img src="img/SHJPalaute.png" alt="Palaute">
+</a>
+</div>
+
   </div>
 <a href="index.html" class="button3">Takaisin etusivulle</a>
 
@@ -51,6 +59,7 @@ Lisäsin sivustolle myös toiminnallisuuksia kuten live-chatin asiakkaiden yhtey
 <p>© 2025 Juulia Vähä</p>
 </footer>
 
+<script src="https://cdn.jsdelivr.net/npm/basiclightbox@5/dist/basicLightbox.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
