--- a/video.html
+++ b/video.html
@@ -40,9 +40,9 @@
 <img src="img/video1.jpg" alt="Videonäkymä">
 <img src="img/video2.jpg" alt="Videonäkymä">
 
-<p>
+<p><strong>
 Video on julkaistu kokonaisuudessaan Youtubessa, pääset katsomaan sen <a href="https://youtu.be/HqkDCJHNL4E" target="_blank">tästä</a>.
-</p>
+</strong></p>
 <br>
 
 <p><strong>Käytetyt laitteet ja ohjelmistot:</strong></p>
@@ -56,8 +56,11 @@ Video on julkaistu kokonaisuudessaan Youtubessa, pääset katsomaan sen <a href=
 <br>
 <br>
 
-<p><strong>Opettajan palaute</strong></p>
+<div class="palautelaatikko">
+  <h5><strong>Opettajan palaute</strong></h5>
+  <br><br>
 <img src="img/VideoPalaute.jpg" alt="Palaute" class="videopalaute">
+</div>
   </div>
 
   <a href="index.html" class="button3">Takaisin etusivulle</a>
