--- a/sovellusohjelmointi.html
+++ b/sovellusohjelmointi.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Esittely</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/basiclightbox@5/dist/basicLightbox.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;800&display=swap" rel="stylesheet">
 </head>
 <body class="muut">
@@ -56,15 +57,26 @@ React (TypeScript), Material UI, localStorage
 <p><strong>
 Sovellus on julkaistu GitHub Pages -palvelussa. Pääset kokeilemaan sitä <a href="https://fjusa016xamk.github.io/foodieplanner/" target="_blank">tästä</a>.
 </p></strong><br>
-<p><strong>Opettajan palaute</strong></p>
+
+<div class="palautelaatikko">
+<h5><strong>Opettajan palaute</strong></h5>
+<p>(avaa kuva klikkaamalla)</p>
+
+<a href="img/SOPalaute.png" class="lightbox-link">
 <img src="img/SOPalaute.png" alt="Palaute">
+</a>
+
+</div>
+
   </div>
+
   <a href="index.html" class="button3">Takaisin etusivulle</a>
 
 <footer class="footer">
 <p>© 2025 Juulia Vähä</p>
 </footer>
 
+<script src="https://cdn.jsdelivr.net/npm/basiclightbox@5/dist/basicLightbox.min.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
