--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="container">
     <div class="kuvajateksti">
       <div class="aloitusteksti">
-        <h1>JUULIA VÄHÄ testi</h1>
+        <h1>JUULIA VÄHÄ</h1>
         <h2>Tietojenkäsittelyn opiskelija</h2>
         <p>Hei, olen Juulia Vähä ja opiskelen kolmatta vuotta tietojenkäsittelyä Kaakkois-Suomen ammattikorkeakoulussa. Nyt etsin uusia mahdollisuuksia työrintamalla, joten eiköhän aloiteta tutustuminen.</p>
         <div class="linkkilaatikot">
