--- a/pelit.html
+++ b/pelit.html
@@ -31,14 +31,14 @@
   
   <p><strong>Oma interaktiivinen pelimaailma Unreal Enginessä</strong></p>
    <br>
-  <p>Kurssin lopputyössä suunnittelin ja toteutin kokonaisen pelimaailman Unreal Engine -ympäristöön. Tavoitteena oli yhdistää aiemmissa harjoituksissa opitut taidot ja luoda visuaalisesti toimiva, interaktiivinen ympäristö, jossa pelaaja voi liikkua ja nauttia maisemasta.</p>
+  <p>Kurssin lopputyönä suunnittelin ja toteutin kokonaisen pelimaailman Unreal Engine -ympäristöön. Tavoitteena oli yhdistää aiemmissa harjoituksissa opitut taidot ja luoda visuaalisesti toimiva, interaktiivinen ympäristö, jossa pelaaja voi liikkua ja nauttia maisemasta.</p>
   <br>
   <img src="img/PP.png" alt="Pelinäkymä1">
   <p><strong>Tehtävän keskeiset osa-alueet:</strong></p>
   <ul class="listat">
-    <li><strong>Oma maasto:</strong> Rakensin maaston täysin itse muokaten Terresculpt-työkalulla ja välttäen kurssin valmiita korkeuskarttoja.</li>
-    <li><strong>Monipuolinen foliage:</strong> Käytin useita eri kasvi- ja luonnonelementtejä, kuten puita, ruohikkoa ja kiviröykkiöitä, maiseman rikastamiseksi ja elävöittämiseksi.</li>
-    <li><strong>Materiaalit ja teksturointi:</strong> Hyödynsin useampaa erilaista materiaalia, jotka sulautuvat toisiinsa luoden yhtenäisen ja realistisen ilmeen.</li>
+    <li><strong>Oma maasto:</strong> Rakensin maaston itse muokaten Terresculpt-työkalulla ilman valmiita korkeuskarttoja.</li>
+    <li><strong>Monipuolinen foliage:</strong> Käytin useita eri kasvi- ja luontoelementtejä, kuten puita, ruohikkoa ja kiviröykkiöitä, maiseman rikastamiseksi ja elävöittämiseksi.</li>
+    <li><strong>Materiaalit:</strong> Hyödynsin useampaa erilaista materiaalia, jotka sulautuvat toisiinsa luoden yhtenäisen ja realistisen ilmeen.</li>
     <li><strong>Selkeä kulkuväylä:</strong> Suunnittelin reitin, jota pitkin pelaaja voi liikkua ja ihailla maisemia. Reitti erottuu ympäristöstä selkeästi, mutta sulautuu luontevasti maisemaan.</li>
     <li><strong>Vesielementti:</strong> Pelimaailmassa on järvi, joka lisää tunnelmaa ja luonnollisuutta.</li>
     <li><strong>Rakennus ja sisustus:</strong> Lisäsin pelimaailmaan rakennuksen, jonka sisustin ja materialisoin huolella. Käytin kurssilla annettua messutaloa.</li>
