--- a/shj.html
+++ b/shj.html
@@ -32,17 +32,20 @@
        <br>
       <p>Tässä projektissa loin suomalaisen käsintehtyjen kynttilöiden verkkokaupan nimeltä <strong>HEHKU</strong>. Tavoitteena oli rakentaa käyttäjäystävällinen ja visuaalisesti houkutteleva verkkosivusto, joka palvelee sisustuksesta ja kodin tunnelman luomisesta kiinnostuneita asiakkaita.
 
-Projektissa käytin WordPress-alustaa ja WooCommerce-lisäosaa verkkokaupan toiminnallisuuksien, kuten ostoskorin, maksutapojen ja varastonhallinnan, toteuttamiseen. </p>
+Projektissa käytin WordPress-alustaa ja WooCommerce-lisäosaa verkkokaupan toiminnallisuuksien, kuten ostoskorin, maksutapojen ja varastonhallinnan toteuttamiseen. </p>
  <br>
 
 <img src="img/SHJ.png" alt="Verkkokauppa">
-<p>Verkkokaupassa on perinteiset sivut, kuten etusivu, "Meistä", "Ota yhteyttä" sekä blogisivu, jossa kerrotaan kynttilöiden valmistusprosessista ja uusista tuotteista.
+<p>Verkkokaupassa on perinteiset sivut, kuten etusivu (kauppa), "Meistä", "Tilini", "Ota yhteyttä" sekä blogisivu, jossa kerrotaan kynttilöiden valmistusprosessista ja uusista tuotteista.
 
 Ulkoasun pohjaksi valitsin Storefront-teeman, jota muokkasin muun muassa lisäämällä oman logon, muuttamalla värimaailmaa ja kääntämällä sivuston suomenkieliseksi Loco Translate -lisäosan avulla.
 
 Lisäsin sivustolle myös toiminnallisuuksia kuten live-chatin asiakkaiden yhteydenottoa varten ja ajastimen (Countdown Timer), jolla voidaan esitellä kampanjoita. Lomakkeet toteutin WPForms-lisäosalla.</p>
 
- <br>
+<p><strong>Jos haluat tarkastella yksityiskohtaista raportointia verkkosivun rakentamisesta, voit ladata raportin alta.</strong></p>
+    <a href="Hehku.pdf" download class="button1">Lataa verkkosivuraportti (PDF)</a>
+ <br><br><br>
+
 <div class="palautelaatikko">
   <h5><strong>Opettajan palaute</strong></h5>
   <p>(avaa kuva klikkaamalla)</p>
