--- a/sovellusohjelmointi.html
+++ b/sovellusohjelmointi.html
@@ -31,7 +31,7 @@
       <p><strong>Henkilökohtainen kaloriseurantasovellus</strong></p>
 <p>
   <br>
-  <strong>Foodie Planner</strong> on sovellusohjelmoinnin kurssilla toteutettu soveltava harjoitustyö, jonka tavoitteena oli osoittaa osaamista kurssin keskeisistä aiheista. Projektissa arvioitiin aiheen valintaa, teknistä toteutusta ja sovelluksen julkaisemista.
+  <strong>Foodie Planner</strong> on sovellusohjelmoinnin kurssilla toteutettu soveltava harjoitustyö, jonka tavoitteena oli osoittaa osaamista kurssin keskeisistä aiheista. Aihe valittiin itse. Projektissa arvioitiin aiheen valintaa, teknistä toteutusta ja sovelluksen julkaisemista.
 </p>
 
 <p>
@@ -43,10 +43,9 @@
 <ul class="listat">
   <li>Kulutuslaskuri (ikä, pituus, paino, sukupuoli, aktiivisuustaso - BMR + aktiivisuuskerroin)</li>
   <li>Ruokapäiväkirja, johon voi lisätä ja poistaa aterioita</li>
-  <li>Aterialistaus, joka näyttää kunkin aterian kalorimäärän</li>
+  <li>Aterialistaus ja valmis reseptisivu, joka näyttää kunkin aterian kalorimäärän</li>
   <li>Tietojen säilytys selaimessa (localStorage)</li>
   <li>Moderni käyttöliittymä Material UI -komponenteilla (valikot, tekstikentät, napit, Drawer-valikko)</li>
-  <li>Reseptisivu, josta löytyy ainesosat ja reseptit</li>
 </ul><br>
 
 <p><strong>Käytetyt teknologiat:</strong><br><br>
