--- a/tietoja.html
+++ b/tietoja.html
@@ -40,7 +40,7 @@ Olen kiinnostunut erityisesti ohjelmointitehtävistä, web- ja UI-suunnittelusta
 
 <p>Haluan oppia uutta jatkuvasti, ja juuri siksi tietojenkäsittelyn ala on erityisen kiehtova, sillä uuden oppiminen ei varmasti lopu kesken. Nautin monipuolisista projekteista, jotka tarjoavat mahdollisuuden kehittyä. 
 Elämässäni onkin usein vähintään yksi projekti työn alla, sillä en tykkää jämähtää paikoilleni. 
-Kun eteeni tulee jokin mielenkiintoinen projekti, minun on vaikea lopettaa työstämästä sitä ja hiomasta sitä parhaaseen mahdolliseen lopputulokseen.
+Kun eteeni tulee jokin mielenkiintoinen kokonaisuus, minun on vaikea lopettaa työstämästä sitä ja hiomasta sitä parhaaseen mahdolliseen lopputulokseen.
 Työskentelen siis tarkasti, tunnollisesti ja kunnianhimoisesti. </p>
 
 <p>Rakastan ihmisiä ja vaalin hyviä ihmissuhteita niin yksityis- kuin työelämässä. 
