--- a/graafinen.html
+++ b/graafinen.html
@@ -36,7 +36,7 @@
 
     <img src="img/GS.png" alt="Pelinäkymä"> 
 
-    <p>Työskentelin Illustratorilla, joka oli minulle uutta, ja opin käyttämään ohjelman työkaluja haasteiden kautta. Pyrin luomaan hahmoista selkeitä ja värikkäitä, mutta kuitenkin yksinkertaisia ja sarjakuvamaisia. Työn aikana kehitin taitojani tietokoneella piirtämisessä, sillä piirtopöydän sijaan käytössä oli ainoastaan hiiri.</p>
+    <p>Työ toteutettiin <strong>Adobe Illustratorilla</strong>, joka oli minulle uusi tuttavuus, ja opin käyttämään ohjelman työkaluja haasteiden kautta. Pyrin luomaan hahmoista selkeitä ja värikkäitä, mutta kuitenkin yksinkertaisia ja sarjakuvamaisia. Työn aikana kehitin taitojani tietokoneella piirtämisessä, sillä piirtopöydän sijaan käytössä oli ainoastaan hiiri.</p>
 
     <p>Kaiken kaikkiaan projekti oli innostava ja opettavainen kokemus, joka vahvisti kiinnostustani pelien tekemiseen ja digitaaliseen piirtämiseen.</p>
 
