--- a/video.html
+++ b/video.html
@@ -30,11 +30,11 @@
       <p><strong>Omavalintainen videoprojekti</strong></p>
        <br>
 <p>
-  Kurssin päättötyönä tehtiin itsenäisesti suoritettava videoprojekti. Aiheen sai valita vapaasti, kunhan se muodosti uutiskatsauksen tai esittelyn jostakin tietystä aihealueesta. Valitsin aiheekseni "Valokuvaus - Harrastuksesta ammatiksi", jossa kävin haastattelemassa video- ja valokuvaaja Antti Vähää hänen työhuoneellaan.
+  Kurssin päättötyönä tehtiin itsenäisesti suoritettava, uutiskautsaustyyppinen videoprojekti. Aiheen sai valita vapaasti itse. Valitsin aiheekseni "Valokuvaus - Harrastuksesta ammatiksi", jossa kävin haastattelemassa video- ja valokuvaaja Antti Vähää hänen työhuoneellaan.
 </p>
 
 <p>
-  Työ käynnistyi käsikirjoituksen laatimisella ja haastattelukysymysten laatimisella, jonka jälkeen suoritettiin kuvaus vapaavalintaisella laitteistolla. Tässä videomateriaali kuvattiin <strong>Canon R5</strong> videokameralla, ja selostajan ääniraidat nauhoitettiin <strong>Roden Podmicilla</strong>. Käytössä haastatteluvastauksia varten oli <strong>Roden Lavalier</strong> nappimikit.
+  Työ käynnistyi käsikirjoituksen ja haastattelukysymysten laatimisella, jonka jälkeen suoritettiin kuvaus vapaavalintaisella laitteistolla. Tässä videomateriaali kuvattiin <strong>Canon R5</strong> kameralla, ja selostajan ääniraidat nauhoitettiin <strong>Roden Podmicilla</strong>. Käytössä haastatteluvastauksia varten oli <strong>Roden Lavalier</strong> nappimikit.
   Lopuksi videoon tehtiin vielä leikkaus ja värimäärittely Adobe Premierellä ja ääni viimeisteltiin Adobe Auditionilla.
 </p><br><br>
 <img src="img/video1.jpg" alt="Videonäkymä">
