--- a/portfoliosivu.html
+++ b/portfoliosivu.html
@@ -35,8 +35,10 @@ Halusin toteuttaa oman portfoliosivuston, joka toimii sekä osaamiseni esittelyn
 Sivusto on alusta loppuun itse suunniteltu ja toteutettu ilman valmiita teemoja tai pohjia, ja koko koodi on kirjoitettu tyhjälle pohjalle (from scratch).
 </p>
 <p>
-Suunnittelin sivuston ensisijaisesti toimimaan sujuvasti suurilla näytöillä, mutta kiinnitin huomiota myös responsiivisuuteen. Tavoitteena oli varmistaa, että käyttökokemus säilyy laadukkaana ja miellyttävänä myös mobiililaitteilla.
+Suunnittelin sivuston ensisijaisesti toimimaan suurilla näytöillä, mutta kiinnitin huomiota myös sen responsiivisuuteen. Tavoitteena oli varmistaa, että käyttökokemus säilyy laadukkaana ja miellyttävänä myös mobiililaitteilla.
 </p>
+
+<p>Sivustolla hyödynsin <strong>HTML</strong> ja <strong>CSS</strong> ominaisuuksia sekä <strong>JavaScriptiä</strong> interaktiivisuuden toteuttamiseen.</p>
 
 <p>Mikäli haluat tarkastella tarkemmin sivuston rakennetta, pääset GitHub-repositorioon <a href="https://github.com/juuliavaha/portfolio.git" target="_blank">tästä.</a></p>
 
