--- a/tietoja.html
+++ b/tietoja.html
@@ -62,7 +62,7 @@ Oman käden jäljen näkeminen, pikkutarkka työ, mutta toisaalta myös itsensä
       <p>HTML, CSS</p>
       <p>TypeScript, Python</p>
       <p>Visual Studio Code</p>
-      <p>React, Node.js</p>
+      <p>React, React Native, Node.js</p>
       <p>Github</p>
       <p>Wordpress</p>
       <p>SQL</p>
