--- a/tietoja.html
+++ b/tietoja.html
@@ -31,7 +31,7 @@
         <h1>Esittely</h1><br><br>
 <p><strong>Hei!</strong> Olen Juulia Vähä ja opiskelen viimeistä vuotta tietojenkäsittelyä Kaakkois-Suomen ammattikorkeakoulussa. 
 Tällä hetkellä toimin lähiesimiehenä kaupan alalla, mutta nyt etsin uusia uramahdollisuuksia tietojenkäsittelyn alalta Pirkanmaan alueelta. Suurimmat intohimoni liittyvät projekteihin, joissa pääsen näkemään kätteni jäljen, ja joissa tarvitaan ongelmanratkaisukykyä ja mahdollisesti myös visuaalista silmää. 
-Olen kiinnostunut erityisesti ohjelmointitehtävistä, web- ja sovelluskehityksestä, käyttöliittymäsuunnittelusta, pelialasta sekä graafisesta suunnittelusta. Minua kiehtovat uudenlaiset teknologiat ja haluan kehittää osaamistani huipputasolle.</p>
+Olen kiinnostunut erityisesti ohjelmointitehtävistä, ohjelmisto-, web- ja sovelluskehityksestä, käyttöliittymäsuunnittelusta, pelialasta sekä graafisesta suunnittelusta. Minua kiehtovat uudenlaiset teknologiat ja haluan kehittää osaamistani huipputasolle.</p>
 
 <br>
 
