--- a/tietoja.html
+++ b/tietoja.html
@@ -63,6 +63,7 @@ Oman käden jäljen näkeminen, pikkutarkka työ, mutta toisaalta myös itsensä
       <p>TypeScript, Python</p>
       <p>Visual Studio Code</p>
       <p>React, React Native, Node.js</p>
+      <p>REST API</p>
       <p>Github</p>
       <p>Wordpress</p>
       <p>SQL</p>
