--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
   <section class="projektiosio">
     <h3>Projekteja</h3>
-    <p>Alla on esitelty erilaisia projekteja opintokokonaisuuksittain.</p>
+    <p>Alta pääset tutustumaan erilaisiin projekteihini.</p>
     <section class="kuvaosio">
     <div class="kuvakortti">
       <a href="sovellusohjelmointi.html">
