--- a/index.html
+++ b/index.html
@@ -46,30 +46,31 @@
 
   <section class="projektiosio">
     <h3>Projekteja</h3>
-    <p>Alta pääset tutustumaan erilaisiin projekteihini.</p>
+    <p>Alta pääset tutustumaan erilaisiin projekteihini. </p>
+    <p>Opintoprojektien osalta voit myös lukea opettajan palautteen.</p>
     <section class="kuvaosio">
     <div class="kuvakortti">
       <a href="sovellusohjelmointi.html">
         <img src="img/SO.png" alt="Kuva 1">
-        <p>Sovellusohjelmointi</p>
+        <p>Henkilökohtainen kaloriseurantasovellus</p>
       </a>
     </div>
     <div class="kuvakortti">
       <a href="pelit.html">
         <img src="img/PP.png" alt="Kuva 2">
-        <p>Pelit ja pelillisyys</p>
+        <p>Oma interaktiivinen pelimaailma Unreal Enginessä</p>
       </a>
     </div>
     <div class="kuvakortti">
       <a href="shj.html">
         <img src="img/SHJ.png" alt="Kuva 3">
-        <p>Sisällönhallintajärjestelmät</p>
+        <p>WordPress-verkkosivuprojekti HEHKU</p>
       </a>
     </div>
     <div class="kuvakortti">
       <a href="graafinen.html">
         <img src="img/GS.png" alt="Kuva 4">
-        <p>Graafinen suunnittelu</p>
+        <p>Pelimaailman ja -hahmojen suunnittelu ja toteutus lastenpeliin</p>
       </a>
     </div>
     <div class="kuvakortti">
@@ -81,7 +82,7 @@
     <div class="kuvakortti">
       <a href="video.html">
         <img src="img/video2.jpg" alt="Kuva 5">
-        <p>Video ja ääni</p>
+        <p>Videohaastattelu</p>
       </a>
     </div>
   </section>
