--- a/shj.html
+++ b/shj.html
@@ -28,7 +28,7 @@
 
   <div class="container">
       <h1>Sisällönhallintajärjestelmät</h1>
-      <p><strong>WordPress-verkkosivuprojekti</strong></p>
+      <p><strong>WordPress-verkkosivuprojekti HEHKU</strong></p>
        <br>
       <p>Tässä projektissa loin suomalaisen käsintehtyjen kynttilöiden verkkokaupan nimeltä <strong>HEHKU</strong>. Tavoitteena oli rakentaa käyttäjäystävällinen ja visuaalisesti houkutteleva verkkosivusto, joka palvelee sisustuksesta ja kodin tunnelman luomisesta kiinnostuneita asiakkaita.
 
