--- a/projektit.html
+++ b/projektit.html
@@ -27,31 +27,32 @@
 
   <div class="container">
     <h1>Projekteja</h1>
-    <p>Alla on esitelty erilaisia projekteja opintokokonaisuuksittain.</p>
+    <p>Alta pääset tutustumaan erilaisiin projekteihini.</p>
+    <p>Opintoprojektien osalta voit myös lukea opettajan palautteen.</p>
       
     <section class="kuvaosio">
       <div class="kuvakortti">
         <a href="sovellusohjelmointi.html">
           <img src="img/SO.png" alt="Kuva 1">
-          <p>Sovellusohjelmointi</p>
+          <p>Henkilökohtainen kaloriseurantasovellus</p>
         </a>
       </div>
       <div class="kuvakortti">
         <a href="pelit.html">
           <img src="img/PP.png" alt="Kuva 2">
-          <p>Pelit ja pelillisyys</p>
+          <p>Oma interaktiivinen pelimaailma Unreal Enginessä</p>
         </a>
       </div>
       <div class="kuvakortti">
         <a href="shj.html">
           <img src="img/SHJ.png" alt="Kuva 3">
-          <p>Sisällönhallintajärjestelmät</p>
+          <p>WordPress-verkkosivuprojekti HEHKU</p>
         </a>
       </div>
       <div class="kuvakortti">
         <a href="graafinen.html">
           <img src="img/GS.png" alt="Kuva 4">
-          <p>Graafinen suunnittelu</p>
+          <p>Pelimaailman ja -hahmojen suunnittelu ja toteutus lastenpeliin</p>
         </a>
       </div>
       <div class="kuvakortti">
@@ -63,7 +64,7 @@
       <div class="kuvakortti">
         <a href="video.html">
           <img src="img/video2.jpg" alt="Kuva 6">
-          <p>Video ja ääni</p>
+          <p>Videohaastattelu</p>
         </a>
       </div>
     </section>
