--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
     <p>Alta pääset tutustumaan erilaisiin projekteihini. </p>
     <p>Opintoprojektien osalta voit myös lukea opettajan palautteen.</p>
     <section class="kuvaosio">
+      <div class="kuvakortti">
+      <a href="restaurating.html">
+        <img src="img/alacartecrop.jpeg" alt="Kuva 7">
+        <p>Ravintoloiden arvostelusovellus Restaurating</p>
+      </a>
+    </div>
     <div class="kuvakortti">
       <a href="sovellusohjelmointi.html">
         <img src="img/SO.png" alt="Kuva 1">
@@ -81,7 +87,7 @@
     </div>
     <div class="kuvakortti">
       <a href="video.html">
-        <img src="img/video2.jpg" alt="Kuva 5">
+        <img src="img/video2.jpg" alt="Kuva 6">
         <p>Videohaastattelu</p>
       </a>
     </div>
