--- a/projektit.html
+++ b/projektit.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;800&display=swap" rel="stylesheet">
 </head>
-<body class="muut">
+<body class="etusivu">
   <nav class="navbar">
 
     <div class="hamburger" id="hamburger">
@@ -31,6 +31,12 @@
     <p>Opintoprojektien osalta voit myös lukea opettajan palautteen.</p>
       
     <section class="kuvaosio">
+      <div class="kuvakortti">
+      <a href="restaurating.html">
+        <img src="img/alacartecrop.jpeg" alt="Kuva 7">
+        <p>Ravintoloiden arvostelusovellus Restaurating</p>
+      </a>
+    </div>
       <div class="kuvakortti">
         <a href="sovellusohjelmointi.html">
           <img src="img/SO.png" alt="Kuva 1">
